started basic database setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = { version = "1.0.77", features = ["backtrace"] }
 axum = { version = "0.7.2", features = ["http2"] }
 clap = { version = "4.4.11", features = ["derive"] }
 config = "0.13.4"
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_yaml = "0.9.29"
 thiserror = "1.0.52"
