--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tower-http = { version = "0.5.0", features = ["cors", "trace"] }
 tracing = "0.1.40"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-uuid = "1.6.1"
+uuid = { version = "1.6.1", features = ["serde"] }
 xdg = "2.5.2"
 
 [dependencies.sqlx]
