--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ base64 = "0.21.5"
 chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["derive"] }
 config = "0.13.4"
+maud = { git= "https://github.com/lambda-fairy/maud", features = ["axum"] }
 rand = "0.8.5"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.193", features = ["derive"] }
