--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ name="suwi"
 anyhow = { version = "1.0.77", features = ["backtrace"] }
 argon2 = { version = "0.5.2", features = ["std"] }
 axum = { version = "0.7.2", features = ["http2"] }
+axum-extra = { version = "0.9.1", features = ["cookie"] }
 base64 = "0.21.5"
 chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["derive"] }
@@ -28,7 +29,7 @@ serde_with = { version = "3.4.0", features = ["base64"] }
 serde_yaml = "0.9.29"
 thiserror = "1.0.52"
 tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
-tower-http = { version = "0.5.0", features = ["cors", "trace"] }
+tower-http = { version = "0.5.0", features = ["cors", "trace", "fs"] }
 tracing = "0.1.40"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
